--- a/style.css
+++ b/style.css
@@ -241,6 +241,8 @@ img {
     color: white;
     position: relative;
     overflow: hidden;
+    z-index: 1;
+    /* Establish stacking context */
 }
 
 /* Hero Background Image */
@@ -250,12 +252,14 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80');
+    /* background-image: url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80'); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.15;
     z-index: 0;
+    display: none;
+    /* Hidden for 3D background */
 }
 
 /* Dark Overlay */
@@ -278,6 +282,8 @@ img {
     height: 100%;
     z-index: 2;
     overflow: hidden;
+    display: none;
+    /* Hidden for 3D background */
 }
 
 .shape {
